Issue #2947696: Added [Justify content to center] CSS/LESS Class to vartheme.base . so that it could be used to justify navigation to center

--- a/less/base/vartheme.base.less
+++ b/less/base/vartheme.base.less
@@ -816,3 +816,14 @@ body.user-logged-in {
   }
 }
 
+// Justify content to center.
+.justify-content-center {
+  -webkit-box-pack: center!important;
+  -ms-flex-pack: center!important;
+  justify-content: center!important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; 
+}
