Issue #2947696: Have RTL support for [Justify content to center] CSS/LESS Class in vartheme-rtl.base for Vartheme and VARTHEME_SUBTHEME

--- a/VARTHEME_SUBTHEME/less/rtl/base/vartheme-rtl.base.less
+++ b/VARTHEME_SUBTHEME/less/rtl/base/vartheme-rtl.base.less
@@ -10,3 +10,10 @@
 // -----------------------------------------------------------------------------
 
 // Insert your Bootstrap (RTL) overrides for bootstrap-rtl library.
+
+// Justify content center.
+[dir="rtl"] .justify-content-center {
+  &.nav-pills > li + li {
+    margin-left: inherit;
+  }
+}
