Issue #2948308: Changed [Vartheme] theme to extend the new bootstrap/framework library from [Bootstrap] 8.3.10 change of records

--- a/css/base/vartheme.base.css
+++ b/css/base/vartheme.base.css
@@ -63,7 +63,9 @@ ul.secondary {
 .block:first-child h2.block-title {
   margin-top: 0;
 }
-p:last-child {
+p:last-child,
+.form-group:last-child,
+.panel:last-child {
   margin-bottom: 0;
 }
 .region-help > .glyphicon {
