--- a/less/base/vartheme.base.less
+++ b/less/base/vartheme.base.less
@@ -98,7 +98,9 @@ ul.secondary {
 }
 
 // Paragraphs.
-p:last-child {
+p:last-child,
+.form-group:last-child,
+.panel:last-child {
   margin-bottom: 0;
 }
 
