--- a/VARTHEME_SUBTHEME/less/base/vartheme.base.less
+++ b/VARTHEME_SUBTHEME/less/base/vartheme.base.less
@@ -110,7 +110,9 @@ ul.secondary {
 }
 
 // Paragraphs.
-p:last-child {
+p:last-child,
+.form-group:last-child,
+.panel:last-child {
   margin-bottom: 0;
 }
 
