--- a/VARTHEME_SUBTHEME/less/component/field.component.less
+++ b/VARTHEME_SUBTHEME/less/component/field.component.less
@@ -22,7 +22,9 @@
 [dir="rtl"] .field--label-inline .field--items {
   padding-left: 0.5em;
   padding-right: 0;
+  float: right; /*RTL*/
 }
 .field--label-inline .field--label::after {
   content: ':';
 }
+
