--- a/templates/system/html.html.twig
+++ b/templates/system/html.html.twig
@@ -62,9 +62,7 @@
     <css-placeholder token="{{ placeholder_token|raw }}">
     {# attache global styles RTL (right to left) if the html tag has dir=rtl #}
     {% if html_attributes['dir'] == 'rtl' %}
-      {{ attach_library('vartheme/global-styles-rtl') }}
-      {{ attach_library('vartheme/bootstrap-print-rtl') }}
-      {{ attach_library('vartheme/bootstrap-styles-rtl') }}
+      {{ attach_library('vartheme/framework-rtl') }}
     {%- endif -%}
     <js-placeholder token="{{ placeholder_token|raw }}">
   </head>
