--- a/templates/video-embed-field/video-embed-iframe.html.twig
+++ b/templates/video-embed-field/video-embed-iframe.html.twig
@@ -4,4 +4,9 @@
  * Display an iframe with alterable components.
  */
 #}
-<iframe{{ attributes }}{% if url is not empty %} src="{{ url }}{% if query is not empty %}?{{ query | url_encode }}{% endif %}{% if fragment is not empty %}#{{ fragment }}{% endif %}"{% endif %}>&nbsp;</iframe>
+{%
+  set classes = [
+    'embed-responsive-item',
+  ]
+%}
+<iframe{{ attributes.addClass(classes) }}{% if url is not empty %} src="{{ url }}{% if query is not empty %}?{{ query | url_encode }}{% endif %}{% if fragment is not empty %}#{{ fragment }}{% endif %}"{% endif %}>&nbsp;</iframe>
