Issue #3003359: Switched [Vartheme] to use [Remote Video] with oEmbed from Drupal 8.6.x core

--- a/templates/media/media.html.twig
+++ b/templates/media/media.html.twig
@@ -20,8 +20,8 @@
     view_mode ? 'media--view-mode-' ~ view_mode.id()|clean_class,
   ]
 %}
-<article{{ attributes.removeClass('contextual-region').addClass(classes) }}>
+<div{{ attributes.removeClass('contextual-region').addClass(classes) }}>
   {% if content %}
     {{ content }}
   {% endif %}
-</article>
+</div>
