--- a/less/base/vartheme.base.less
+++ b/less/base/vartheme.base.less
@@ -824,3 +824,9 @@ body.user-logged-in {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap; 
 }
+
+body.path-frontpage {
+  h1.page-header {
+    display: none;
+  }
+}
