--- a/less/theme/betterlogin.theme.less
+++ b/less/theme/betterlogin.theme.less
@@ -9,10 +9,19 @@
 #auth-box {
   padding: @navbar-height 0 0;
 
-  h1#the-logo {
-    text-align: center;
-    margin: 0;
-    padding: 0 0 25px;
+  h1 {
+    &#the-logo {
+      text-align: center;
+      margin: 0;
+      padding: 0 0 25px;
+    }
+
+    &#page-user-login-title,
+    &#page-user-password-title,
+    &#page-user-register-title,
+    &#page-user-reset-title {
+      display: none;
+    }
   }
 
   h2.title {
