Issue #3009983: Fix homepage, user/login, user/register, and user/password having no H1

--- a/css/base/vartheme.base.css
+++ b/css/base/vartheme.base.css
@@ -630,3 +630,6 @@ body.user-logged-in .btn.visible-admin {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
+body.path-frontpage h1.page-header {
+  display: none;
+}
