--- a/VARTHEME_SUBTHEME/less/base/vartheme.base.less
+++ b/VARTHEME_SUBTHEME/less/base/vartheme.base.less
@@ -827,6 +827,13 @@ body.user-logged-in {
 
 body.path-frontpage {
   h1.page-header {
-    display: none;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
   }
 }
