Issue #3012888 by mhawwari: Fix Syntax Error In Card Component

--- a/VARTHEME_SUBTHEME/css/component/card.component.css
+++ b/VARTHEME_SUBTHEME/css/component/card.component.css
@@ -33,7 +33,7 @@
 .card-text:last-child {
   margin-bottom: 0;
 }
-.card-link::hover {
+.card-link:hover {
   text-decoration: none;
 }
 .card-link + .card-link {
