--- a/VARTHEME_SUBTHEME/css/component/card.component.css
+++ b/VARTHEME_SUBTHEME/css/component/card.component.css
@@ -13,6 +13,10 @@
   margin-right: 0;
   margin-left: 0;
 }
+.card > a {
+  display: block;
+  height: 100%;
+}
 .card > .list-group:first-child .list-group-item:first-child {
   border-radius: 4px;
 }
