--- a/VARTHEME_SUBTHEME/less/variables.less
+++ b/VARTHEME_SUBTHEME/less/variables.less
@@ -886,6 +886,39 @@
 @card-columns-margin:               @card-spacer-y;
 
 
+// Custom Varbase Hero slider media variables.
+// -----------------------------------------------------------------------------
+// Text color.
+@hero-title-text-color: #fff;
+@hero-brief-text-color: #fff;
+@hero-link-text-color: #fff;
+
+// Font sizes with responsive sizes.
+@hero-xlarge-title-font-size-xs: 3.3rem;
+@hero-xlarge-title-font-size-sm: 57px;
+@hero-xlarge-title-font-size-md: 57px;
+@hero-xlarge-title-font-size-lg: 57px;
+
+// Hero content style.
+@hero-content-hover-opacity: 0.7;
+@hero-content-background-color1: rgb(0,0,0);
+@hero-content-background-color2: rgba(0,0,0,0.3);
+
+// Empty hero background color.
+@hero-empty-view-background: #e0e0e0;
+
+// Gatter for arrow of navigation.
+@hero-arrow-gatter: 10px;
+
+// Height for screen size xs and less.
+@hero-min-height-xs: 300px;
+@hero-max-height-xs: 300px;
+
+// For screen size sm and more.
+@hero-min-height-sm: 600px;
+@hero-max-height-sm: 600px;
+
+
 // Footer wrapper background color.
 @footer-wrapper-bg:             #f2f2f2;
 
